src/components/Chat.css
.chat {
  display: flex;
  flex-direction: column;
  background-color: white;
  flex: 1;
}
.chat__header {
  display: flex;
  padding: 10px;
  box-shadow: 0 3px 0px #dfdfdf;
}
.chat__headerInfo {
  flex: 1;
  padding-left: 20px;
}
.chat__body {
  flex: 1;
  padding-top: 30px;
  position: relative;
}
.chat__message {
  position: relative;
  font-size: 16px;
  padding: 10px;
  width: fit-content;
  border-radius: 10px;
  background-color: black;
  margin-bottom: 30px;
  font-weight: 100;
  color: white;
  font-size: 20px;
}
.chat__name {
  font-size: 14px;
}
.chat__sender {
  margin-left: auto;
  background-color: #266dd3;
  color: white;
}
.chat__timestamp {
  margin-left: 10px;
  font-size: 12px;
  color: white;
}

.chat__footer {
  padding: 11px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 2%;
}
.chat__footer > form {
  flex: 1;
  display: flex;
}
.chat__footer > form > input {
  flex: 1;
  border-radius: 6px;
  padding: 12px;
  border: none;
  margin: 0px 10px;
  background-color: white;
  color: black;
  border: 2px solid grey;
}
.chat__footer > form > button {
  display: none;
}
.chat__footer > .MuiSvgIcon-root {
  color: #919191;
}

.allmessageshow::-webkit-scrollbar {
  width: 5px;
}

.allmessageshow::-webkit-scrollbar-track {
  background: black;
}

.allmessageshow::-webkit-scrollbar-thumb {
  background: white;
}
.allmessageshow {
  max-height: 750px;
  overflow-y: scroll;
  padding: 0px 20px;
  scrollbar-color: white black;
  scrollbar-width: thin;
}

